# actix_01

./: .env  Cargo.toml  readme.md  test.db
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231208_072420_create_product_table.rs
src/: common.rs  configs.rs  db.rs  entity.rs  errors.rs  lib.rs  main.rs  servers.rs
src/api/: demo.rs  mod.rs
src/api/v1/: imgs.rs  mod.rs  users.rs
src/design_pattern/: interpreter.rs  mod.rs
src/design_pattern/command/: mod.rs  v1.rs  v2.rs  v3.rs
src/servers/: api.rs  demo.rs  mod.rs
