[package]
name = "actix_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
actix-multipart = "0.6.0"
actix-files = "0.6.0"
actix-cors = "0.6.0"
derive_more = "0.99"
env_logger = "0.10"
# utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
# utoipa = "4.1"
log = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
urlencoding = "2.1.3"
