[package]
name = "actix_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-multipart = "0.6.0"
actix-files = "0.6.0"
actix-cors = "0.6.0"
derive_more = "0.99"
env_logger = "0.10"
log = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
urlencoding = "2.1.3"


[dependencies.sea-orm]
version = "0.12"
features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono"]
